test/spec_vectors/simd_splat/fail/module_13.wat
(module (func (result v128) f32x4.splat (f64.const 4.0)))